--- a/css/about.css
+++ b/css/about.css
@@ -32,7 +32,26 @@ header {
     grid-area: header;
 }
 
-.navBar {
+.navBarSmall {
+    display: none;
+    text-transform: uppercase;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #000;
+    text-align: center;
+    vertical-align: top;
+}
+
+.navBarSmall a:hover {
+    color: #27724E;
+    background-color: rgb(27, 27, 27);
+    transition: 1s;
+}
+
+.navbar {
+    --bs-navbar-padding-y: 1rem;
+}
+
+.navBarWide {
     width: 100%;
     height: 80px;
     background-color: #000;
@@ -57,18 +76,18 @@ header {
     align-items: center;
 }
 
-.navBar .CajaNav a {
+.navBarWide .CajaNav a {
     text-decoration: none;
     color: #fff;
     height: 100%;
-    width: 20%;
+    width: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: 1s;
 }
 
-.navBar .CajaNav a:hover {
+.navBarWide .CajaNav a:hover {
     color: #27724E;
     background-color: rgb(27, 27, 27);
     transition: 1s;
@@ -110,7 +129,7 @@ main {
 
 .bloqueIndiv {
     width: 400px;
-    height: 600px;
+    height: 720px;
     margin-top: 10px;
     padding: 0px 40px 0px 40px;
     background-color: rgba(255, 255, 255, 0.05);
@@ -244,6 +263,14 @@ main {
     font-size: 15px;
 }
 
+.card-body h4 {
+    text-align: center;
+}
+
+.card-body p {
+    text-align: center;
+}
+
 /* ------------/QUIENES SOMOS------------ */
 /* ----------------/MAIN----------------- */
 /* -------------------------------------- */
@@ -330,7 +357,8 @@ footer .logoFooter a img:hover {
 /* -------------MEDIA QUERIES------------ */
 
 @media only screen and (max-width: 970px) {
-    .navBar {
+
+    .navBarWide {
         font-size: 15px;
     }
 
@@ -364,18 +392,6 @@ footer .logoFooter a img:hover {
 
 @media only screen and (max-width: 700px) {
 
-    .navBar {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        align-items: center;
-        height: 100px;
-    }
-
-    .logoNav {
-        display: none;
-    }
-
     .navBar a {
         margin-left: 20px;
         line-height: 0px;
@@ -386,7 +402,7 @@ footer .logoFooter a img:hover {
 @media only screen and (max-width: 620px) {
     .bloqueIndiv {
         width: 400px;
-        height: 450px;
+        height: 520px;
         padding: 0px 40px 0px 40px;
     }
 
@@ -454,7 +470,19 @@ footer .logoFooter a img:hover {
     }
 }
 
+@media only screen and (max-width: 575px) {
+
+    .navBarWide {
+        display: none;
+    }
+
+    .navBarSmall {
+        display: block;
+    }
+}
+
 @media only screen and (max-width: 480px) {
+
     .bloqueIndiv {
         width: 350px;
         height: 500px;
@@ -515,15 +543,10 @@ footer .logoFooter a img:hover {
 }
 
 @media only screen and (max-width: 410px) {
-    .navBar a {
-        margin-left: 5px;
-        margin-right: 5px;
-        line-height: 0px;
-    }
 
     .bloqueIndiv {
         width: 300px;
-        height: 480px;
+        height: 580px;
     }
 
     .bloqueIndiv h2 {
