--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
-/* * {
+* {
     box-sizing: border-box;
-} */
+}
 
 /* 
 Paleta de colores
@@ -33,7 +33,26 @@ header {
     grid-area: header;
 }
 
-.navBar {
+.navBarSmall {
+    display: none;
+    text-transform: uppercase;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #000;
+    text-align: center;
+    vertical-align: top;
+}
+
+.navBarSmall a:hover {
+    color: #27724E;
+    background-color: rgb(27, 27, 27);
+    transition: 1s;
+}
+
+.navbar {
+    --bs-navbar-padding-y: 1rem;
+}
+
+.navBarWide {
     width: 100%;
     height: 80px;
     background-color: #000;
@@ -58,18 +77,18 @@ header {
     align-items: center;
 }
 
-.navBar .CajaNav a {
+.navBarWide .CajaNav a {
     text-decoration: none;
     color: #fff;
     height: 100%;
-    width: 20%;
+    width: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: 1s;
 }
 
-.navBar .CajaNav a:hover {
+.navBarWide .CajaNav a:hover {
     color: #27724E;
     background-color: rgb(27, 27, 27);
     transition: 1s;
@@ -115,6 +134,7 @@ main {
 h1 {
     text-align: center;
     text-transform: uppercase;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 80px;
     margin: 0px 0px 0px 0px;
     padding: 0px;
@@ -173,7 +193,7 @@ main .descripcionVanadio:hover {
 /* ------------/ÚLTIMO VIDEO------------- */
 /* ---------------SLIDESHOW-------------- */
 
-.slideshow {
+.carousel {
     background-color: rgba(92, 92, 92, 0.534);
     margin: 100px 0px 100px 0px;
     padding: 20px 0px 20px 0px;
@@ -285,7 +305,8 @@ footer .logoFooter a img:hover {
 }
 
 @media only screen and (max-width: 970px) {
-    .navBar {
+
+    .navBarWide {
         font-size: 15px;
     }
 
@@ -351,21 +372,6 @@ footer .logoFooter a img:hover {
 }
 
 @media only screen and (max-width: 700px) {
-    .gridContainer {
-        grid-template-rows: 100px auto 1fr 80px;
-    }
-
-    .navBar {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        align-items: center;
-        height: 100px;
-    }
-
-    .logoNav {
-        display: none;
-    }
 
     .navBar a {
         margin-left: 20px;
@@ -407,6 +413,17 @@ footer .logoFooter a img:hover {
     }
 }
 
+@media only screen and (max-width: 575px) {
+
+    .navBarWide {
+        display: none;
+    }
+
+    .navBarSmall {
+        display: block;
+    }
+}
+
 @media only screen and (max-width: 520px) {
     .imgSlideshow {
         width: 400px;
@@ -437,11 +454,6 @@ footer .logoFooter a img:hover {
 }
 
 @media only screen and (max-width: 410px) {
-    .navBar a {
-        margin-left: 5px;
-        margin-right: 5px;
-        line-height: 0px;
-    }
 
     main .descripcionVanadio {
         font-size: 14px;
