--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -10,22 +10,31 @@ footer {
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
     font-size: 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100%;
+    grid-template-areas:
+        "redes logo texto"
+    ;
+
 
     .iconosRedes {
+        grid-area: redes;
         display: flex;
         flex-flow: row wrap;
+        justify-content: center;
         align-items: center;
-
         a {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
             i {
-                font-size: 40px;
+                font-size: 30px;
                 color: #fff;
                 margin-right: 30px;
                 margin-left: 30px;
-
                 &:hover {
                     color: #27724E;
                 }
@@ -34,15 +43,14 @@ footer {
     }
 
     .logoFooter {
+        grid-area: logo;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         a {
-            display: flex;
-            align-items: center;
-            justify-items: center;
-
             img {
                 width: 50px;
                 transition: 1s;
-
                 &:hover {
                     width: 70px;
                     transition: 1s;
@@ -51,18 +59,18 @@ footer {
         }
     }
 
-    .infoFooterGrande {
-        font-size: 15px;
-        color: #fff;
+    .infoFooter {
+        grid-area: texto;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        span {
+            font-size: 15px;
+            color: #fff;
+            margin-top: 7px;
+        }
     }
-
-    .infoFooterChico {
-        display: none;
-        font-size: 15px;
-        color: #fff;
-    }
-
 }
-
 
 /* ---------------/FOOTER---------------- */
