--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,168 +1,184 @@
 @import "./base/generales";
+@import "./base/layout";
 @import "./components/header";
+@import "./components/main";
+@import "./components/slideshow";
 @import "./components/footer";
+@import "./components/botonUp";
 
-html {
-    scroll-behavior: smooth;
+
+/* -----------------INDEX----------------- */
+
+/* ----------------PORTADA---------------- */
+.portada {
+    grid-area: videoPortada;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
-.gridContainer {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 80px 1fr 80px;
-    grid-template-areas:
-        "header"
-        "bodyMain"
-        "footer"
-    ;
-}
+/* ---------------/PORTADA---------------- */
 
-/* -----------------MAIN----------------- */
+/* ----------------/INDEX----------------- */
+/* --------------------------------------- */
+/* -----------------ABOUT----------------- */
 
-main {
-    grid-area: bodyMain;
-    color: #fff;
-    background-color: #000;
-    font-family: 'Courier New', Courier, monospace;
-    background-image: url(../media/background.png);
-    background-blend-mode: hard-light;
-    background-size: contain;
-    .bloquesInfo {
+.bloquesInfo {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin: 40px 0px 40px 0px;
+
+    .bloqueIndiv {
+        width: 450px;
+        height: 720px;
+        margin: 10px 20px 10px 20px;
+        padding: 40px 40px 40px 40px;
+        background-color: rgba(255, 255, 255, 0.05);
         display: flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-        align-items: center;
-        width: 100%;
-        margin: 40px 0px 40px 0px;
-        .bloqueIndiv {
-            width: 450px;
-            height: 720px;
-            margin: 10px 20px 10px 20px;
-            padding: 40px 40px 40px 40px;
-            background-color: rgba(255, 255, 255, 0.05);
-            display: flex;
-            flex-flow: column wrap;
+        flex-flow: column wrap;
+        transition: 1s;
+
+        &:hover {
+            background-color: #2721595d;
             transition: 1s;
-            &:hover {
-                background-color: #2721595d;
-                transition: 1s;
-            }
-            h2 {
-                font-size: 30px;
-                font-weight: 600;
-                text-transform: uppercase;
-                margin: 10px 0px 30px 0px;
-            }
-            p {
-                margin-right: 7px;
-            }
         }
-    }
-    .tituloIntegrantes {
-        text-align: center;
-        text-transform: uppercase;
-        font-size: 40px;
-        font-weight: 700;
-        margin: 5px 0px 5px 0px;
-    }
-    .principal {
-        width: 100%;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        margin: 40px 0px 40px 0px;
-        .fundador {
-            display: flex;
-            flex-flow: column wrap;
-            align-items: center;
-            justify-content: center;
-            background-color: rgba(255, 255, 255, 0.05);
-            width: 600px;
-            height: auto;
-            margin: 0px 20px 0px 20px;
-            padding: 40px 20px 40px 20px;
-            transition: 1s;
-            &:hover {
-                background-color: #2721595d;
-                transition: 1s;
-            }
-            img {
-                width: 400px;
-                border-radius: 1%;
-                border: 3px solid #000;
-            }
-            h3 {
-                font-size: 24px;
-                font-weight: 600;
-                margin: 20px 0px 20px 0px;
-                text-align: center;
-            }
-            p {
-                font-size: 16px;
-                padding: 0px;
-                margin: 0px;
-                text-align: center;
-            }   
+
+        h2 {
+            font-size: 30px;
+            font-weight: 600;
+            text-transform: uppercase;
+            margin: 10px 0px 30px 0px;
         }
-    }
-    .secundario {
-        width: 100%;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-        align-items: center;
-        margin: 20px 0px 40px 0px;
-        .colaborador {
-            display: flex;
-            flex-flow: column wrap;
-            align-items: center;
-            justify-content: space-evenly;
-            background-color: rgba(255, 255, 255, 0.05);
-            width: 500px;
-            height: auto;
-            margin: 10px 40px 10px 40px;
-            padding: 40px 20px 40px 20px;
-            transition: 1s;
-            &:hover {
-                background-color: #2721595d;
-                transition: 1s;
-            }
-            img {
-                width: 350px;
-                border-radius: 1%;
-                border: 3px solid #000;
-            }
-            h4 {
-                font-size: 20px;
-                font-weight: 600;
-                margin: 20px 0px 20px 0px;
-                text-align: center;
-            }
-            p {
-                font-size: 16px;
-                padding: 0px;
-                margin: 0px;
-                text-align: center;
-            }
+
+        p {
+            margin-right: 7px;
         }
     }
 }
 
-.subir {
-    height: 50px;
-    width: 50px;
-    border-radius: 10%;
-    font-size: 40px;
+.tituloIntegrantes {
     text-align: center;
-    line-height: 53px;
-    color: rgba(255, 255, 255, 0.5);
-    position: fixed;
-    right: 15px;
-    bottom: 15px;
-    &:hover {
-        color: #fff;
+    text-transform: uppercase;
+    font-size: 40px;
+    font-weight: 700;
+    margin: 5px 0px 5px 0px;
+}
+
+.principal {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 40px 0px 40px 0px;
+
+    .fundador {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(255, 255, 255, 0.05);
+        width: 600px;
+        height: auto;
+        margin: 0px 20px 0px 20px;
+        padding: 40px 20px 40px 20px;
+        transition: 1s;
+
+        &:hover {
+            background-color: #2721595d;
+            transition: 1s;
+        }
+
+        img {
+            width: 400px;
+            border-radius: 1%;
+            border: 3px solid #000;
+        }
+
+        h3 {
+            font-size: 24px;
+            font-weight: 600;
+            margin: 20px 0px 20px 0px;
+            text-align: center;
+        }
+
+        p {
+            font-size: 16px;
+            padding: 0px;
+            margin: 0px;
+            text-align: center;
+        }
     }
 }
 
-/* ----------------/MAIN----------------- */
-/* -------------------------------------- */
+.secundario {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 20px 0px 40px 0px;
+
+    .colaborador {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: rgba(255, 255, 255, 0.05);
+        width: 500px;
+        height: auto;
+        margin: 10px 40px 10px 40px;
+        padding: 40px 20px 40px 20px;
+        transition: 1s;
+
+        &:hover {
+            background-color: #2721595d;
+            transition: 1s;
+        }
+
+        img {
+            width: 350px;
+            border-radius: 1%;
+            border: 3px solid #000;
+        }
+
+        h4 {
+            font-size: 20px;
+            font-weight: 600;
+            margin: 20px 0px 20px 0px;
+            text-align: center;
+        }
+
+        p {
+            font-size: 16px;
+            padding: 0px;
+            margin: 0px;
+            text-align: center;
+        }
+    }
+}
+
+/* ----------------/ABOUT----------------- */
+/* --------------------------------------- */
+/* -----------------REEL------------------ */
+
+
+
+/* ----------------/REEL------------------ */
+/* --------------------------------------- */
+/* ---------------PROYECTOS--------------- */
+
+
+
+/* --------------/PROYECTOS--------------- */
+/* --------------------------------------- */
+/* ---------------CONTACTO---------------- */
+
+
+
+/* --------------/CONTACTO---------------- */
+/* --------------------------------------- */
+
+@import "./base/_mediaqueries";
